src/components/compound/DlTable/styles/dl-table-styles.scss
.dl-markup-table {
    overflow: auto;
}

.dl-table {
    .vertical-border {
        border-left: 1px solid var(--dl-color-separator);
        border-right: 1px solid var(--dl-color-separator);
    }

    thead {
        position: sticky;
        top: 0;
        background-color: var(--dl-color-panel-background);
        z-index: 50;
    }

    .sticky-col {
        position: sticky;
        background-color: var(--dl-color-panel-background);
        z-index: 50;
    }

    .dl-th {
        z-index: 100;
    }

    .dl-th.sticky-col {
        z-index: 101;
    }

    .inner-th-wrapper {
        display: flex;
        align-items: center;
        justify-content: space-between;
        height: 34px;
        position: relative;
        line-height: 34px;
        &--left {
            left: 0;
            transform: none;
        }
    }

    .inner-th {
        display: inline-block;
        flex: 0 1 auto;
        left: 50%;
        transform: translateX(-50%);
        overflow: hidden;
        position: relative;
        line-height: 34px;

        &--left {
            left: 0;
            transform: none;
        }
    }

    .th-icons {
        display: flex;
        flex: 0 1 auto;
        margin-left: auto;
        align-items: center;
        justify-content: flex-end;
    }

    .th-sort-icon {
        display: flex;
        flex: 0 1 auto;
        margin-right: auto;
        align-items: center;
        justify-content: flex-start;
    }


    .expanded-row {
        display: flex;
        justify-content: center;
    }

    width: 100%;
    max-width: 100%;
    border-collapse: separate;
    border-spacing: 0;

    &__drag-icon>div {
        transition: all ease-in 0.1s;
        opacity: 0;
    }

    //markup-table

    &__card {
        background-color: var(--dl-color-panel-background);
        border-radius: 2px;

        .dl-table__middle {
            flex: 1 1 auto;
        }

        .dl-table__top,
        .dl-table__bottom {
            flex: 0 0 auto;
        }
    }

    .dl-table__top,
    .dl-table__bottom,
    thead tr:first-child th {
        /* bg color is important for th; just specify one */
        background-color: var(--dl-color-panel-background);
    }

    thead tr th {
        position: sticky !important;
        z-index: 1;
    }

    thead tr:first-child th {
        top: 0;
    }

    .trigger-icon {
        margin-right: 5px;
    }

    th:first-child,
    td:first-child {
        padding-left: 8px;
    }

    thead tr {
        height: 34px;
    }

    tbody tr {
        height: 40px;

        &:not(.dl-tr--no-hover):hover {
            .dl-table__drag-icon>div {
                opacity: 1;
            }
            td:not(.dl-td--no-hover) {
                background-color: var(--dl-color-fill-hover);
            }
        }
    }

    .dl-table-cell-inner-div {
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
        padding: 10px 8px;
        display: flex;
    }

    th {
        font-family: 'Roboto', sans-serif;
        font-weight: 400;
        font-size: 14px;
        line-height: 14px;
        color: var(--dl-color-medium);
        background-color: inherit;
        user-select: none;

        &.empty-col {
            cursor: default !important;

            &:active {
                cursor: default !important;
            }
        }

        &.sortable {
            cursor: pointer;

            &:hover .dl-table__sort-icon {
                opacity: 0.64 !important;
            }
        }
    }

    thead,
    td,
    th {
        border-style: solid;
        border-width: 0;
    }

    .dl-tr {
        &--no-hover {
            &:hover {
                td {
                    background-color: none !important;
                }
            }
        }
    }

    .dl-td {
        &--no-hover {
            &:hover {
                background-color: none !important;
            }
        }
    }

    tbody>tr:not(.dl-tr--no-hover):hover>td:not(.dl-td--no-hover):before {
        content: '';
    }

    tbody {
        tr.selected {
            background-color: var(--dl-color-fill);
        }

        tr.selected td:after {
            content: '';
        }
    }

    &--draggable-columns {
        th {
            cursor: grab;

            &:active {
                cursor: grabbing !important;
            }
        }
    }

    td,
    th {
        box-sizing: border-box;
    }

    &--no-wrap {

        th,
        td {
            white-space: nowrap;
        }
    }

    &__container {
        position: relative;

        *>div:first-child {
            border-top-left-radius: inherit;
            border-top-right-radius: inherit;
        }

        *>div:last-child {
            border-bottom-left-radius: inherit;
            border-bottom-right-radius: inherit;
        }
    }

    &__separator {
        min-width: 8px !important;
    }

    &__title {
        font-size: 20px;
        letter-spacing: 0.005em;
        font-weight: 400;
        color: var(--dl-color-darker);
    }

    &--bordered {
        border: 1px solid var(--dl-color-separator);
        border-radius: 2px;
    }

    &__control {
        display: flex;
        align-items: center;
    }

    &__sort-icon {
        transition: transform 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
        opacity: 0.86;

        &--left,
        &--center {
            margin-left: 4px;
        }

        &--right {
            margin-right: 4px;
        }
    }

    &__middle {
        max-width: 100%;
    }

    &__progress {
        height: 0 !important;

        th {
            padding: 0 !important;
            border: 0 !important;
        }

        .dl-progress-wrapper {
            position: absolute !important;
            bottom: 0 !important;

            &::v-deep .progress-container {
                .dl-progress-bar {
                    height: 2px !important;
                    margin: 0;
                }
            }
        }
    }

    &__progress > .relative-position {
        z-index: 102;
    }

    &__bottom {
        border-top: 1px solid var(--dl-color-separator);
        min-height: 50px;
        padding: 4px 14px 4px 16px;
        font-size: 12px;
        line-height: 14px;

        .dl-table__control {
            width: 100%;
            min-height: 24px;
        }
    }

    &__bottom--nodata {
        color: var(--dl-color-lighter);

        .dl-table__control {
            justify-content: center;
        }
    }

    &--col-auto-width {
        width: 25px;
    }

    &--col-checkbox-wrapper {
        text-align: left;
        width: 25px;
    }

    &__top {
        position: relative;
        padding: 12px 16px;

        .dl-table__control {
            flex-wrap: wrap;
        }
    }

    thead,
    tr,
    th,
    td {
        border-color: var(--dl-color-separator);

        &>label {
            padding: 0;
        }
    }

    tbody {
        td {
            position: relative;
            font-size: 12px;
            line-height: 12px;
            background-color: inherit;
            color: var(--dl-color-darker);

            text-overflow: ellipsis;
            white-space: nowrap;
            overflow: hidden;

            &:before,
            &:after {
                position: absolute;
                top: 0;
                left: 0;
                right: 0;
                bottom: 0;
                pointer-events: none;
            }
        }

        tr.selected td:after {
            content: '';
        }
    }

    &__is-dragging {
        background-color: var(--dl-color-fill);
    }

    &__selected {
        background-color: var(--dl-color-fill) !important;
        color: var(--dl-color-fill) !important;
        border-color: var(--dl-color-fill) !important;
    }

    &__drag {
        position: fixed;
        top: -99999px;
        left: -99999px;
        z-index: 10000;
        overflow: visible;
        opacity: 1;
        box-shadow: 0px 3px 6px rgba(16, 30, 115, 0.15);
        border-radius: 2px;
        font-size: 12px;
        background-color: var(--dl-color-panel-background);

        & th {
            cursor: grabbing !important;
        }

        & td {
            border-color: transparent;
        }

        &--col {
            display: flex;
            flex-direction: column;

            & td {
                text-align: center;
                height: 40px;
            }
        }
    }
}

.draggable-icon {
    cursor: grab;

    &:active {
        cursor: grabbing !important;
    }
}

/*
 * dense size
 */

.dl-table--dense {
    .dl-table__top {
        position: relative;
        padding: 5px 16px;
    }

    .dl-table__bottom {
        min-height: 33px;
    }

    .dl-table__sort-icon {
        // font-size: 110%;
        font-size: 80%;
    }

    .dl-table {
        th {
            font-size: 14px;
            line-height: 14px;
        }

        thead tr {
            height: 24px;
        }

        tbody tr {
            height: 28px;
        }

        .dl-table-cell-inner-div {
            padding: 7px 16px;
        }
    }

    .dl-table__bottom-item {
        margin-right: 8px;
    }

    .dl-table__select {

        .dl-field__control,
        .dl-field__native {
            min-height: 24px;
            padding: 0;
        }

        .dl-field__marginal {
            height: 24px;
        }
    }
}

.dl-table--dense.dl-table--loading {
    thead tr:last-child th {
        /* height of all previous header rows */
        top: 32px;
    }
}

/*
 * Separators
 */
.dl-table--none-separator {
    thead th {
        border-bottom-width: 1px;
    }
}

.dl-table--horizontal-separator,
.dl-table--cell-separator {

    thead th,
    tbody tr:not(:last-child)>td {
        border-bottom-width: 1px;
    }

    tbody:not(:last-child)>tr>td {
        border-bottom-width: 1px;
    }
}

.dl-table--vertical-separator,
.dl-table--cell-separator {

    td,
    th {
        border-left-width: 1px;
    }

    thead tr:last-child th,
    &.dl-table--loading tr:nth-last-child(2) th {
        border-bottom-width: 1px;
    }

    td:first-child,
    th:first-child {
        border-left: 0;
    }

    .dl-table__top {
        position: relative;
        border-bottom: 1px solid var(--dl-color-separator);
    }
}

.visible-columns-justify-end {
    justify-content: end;
}

